--- a/tests/cassettes/test_event_retrieve_payload.yaml
+++ b/tests/cassettes/test_event_retrieve_payload.yaml
@@ -20,8 +20,8 @@ interactions:
     uri: https://api.easypost.com/v2/webhooks
   response:
     body:
-      string: '{"id": "hook_e7c3034e937611edac174bf8a84ecdd1", "object": "Webhook",
-        "mode": "test", "url": "http://example.com", "created_at": "2023-01-13T19:17:22Z",
+      string: '{"id": "hook_dbd18a5ef34511edadd33df619573352", "object": "Webhook",
+        "mode": "test", "url": "http://example.com", "created_at": "2023-05-15T17:28:08Z",
         "disabled_at": null}'
     headers:
       cache-control:
@@ -31,7 +31,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"ae921e1299ffcba0bb97ce20b095131f"
+      - W/"6d20b92a48e80c6387786ebf2db8ff7a"
       expires:
       - '0'
       pragma:
@@ -49,20 +49,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 1604567e63c1ae42e78965e900056728
+      - 3f02a2cd64626ba8e78740a400205b44
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb11nuq
+      - bigweb4nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 29913d444b
-      - extlb1nuq 29913d444b
+      - intlb2nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.137415'
+      - '0.118994'
       x-version-label:
-      - easypost-202301131832-957dabd382-master
+      - easypost-202305151637-e5ce91ee24-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -96,9 +96,9 @@ interactions:
     uri: https://api.easypost.com/v2/batches
   response:
     body:
-      string: '{"id": "batch_90ba828172a642c0802a70b96dc3b5ee", "object": "Batch",
+      string: '{"id": "batch_7f2f5a9fc0294e23bcde64c360901f96", "object": "Batch",
         "mode": "test", "state": "creating", "num_shipments": 1, "reference": null,
-        "created_at": "2023-01-13T19:17:22Z", "updated_at": "2023-01-13T19:17:22Z",
+        "created_at": "2023-05-15T17:28:08Z", "updated_at": "2023-05-15T17:28:08Z",
         "scan_form": null, "shipments": [], "status": {"created": 0, "queued_for_purchase":
         0, "creation_failed": 0, "postage_purchased": 0, "postage_purchase_failed":
         0}, "pickup": null, "label_url": null}'
@@ -110,7 +110,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"479a0b87edf4ecb1255a81180fdafe3d"
+      - W/"3b3599195eb5461bded4952b965b11ae"
       expires:
       - '0'
       pragma:
@@ -128,20 +128,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 1604567e63c1ae42e78965e90005673e
+      - 3f02a2cd64626ba8e78740a400205b59
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb9nuq
+      - bigweb6nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 29913d444b
-      - extlb1nuq 29913d444b
+      - intlb1nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.057133'
+      - '0.055777'
       x-version-label:
-      - easypost-202301131832-957dabd382-master
+      - easypost-202305151637-e5ce91ee24-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -164,31 +164,31 @@ interactions:
     uri: https://api.easypost.com/v2/events?page_size=5
   response:
     body:
-      string: '{"events": [{"description": "batch.updated", "id": "evt_e800853e937611eda94a533d9c633e56",
+      string: '{"events": [{"description": "batch.updated", "id": "evt_dc1604aef34511ed959c19d5ad973871",
         "user_id": "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
-        "2023-01-13T19:17:22.612Z", "mode": "test", "object": "Event"}, {"description":
-        "batch.created", "id": "evt_e7ec4d94937611ed9f0a55d2dc2ff632", "user_id":
+        "2023-05-15T17:28:08.907Z", "mode": "test", "object": "Event"}, {"description":
+        "batch.created", "id": "evt_dbf92bb8f34511eda0d51fe9fe89de8f", "user_id":
         "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
-        "2023-01-13T19:17:22.480Z", "mode": "test", "object": "Event"}, {"description":
-        "batch.updated", "id": "evt_cacc5f60937611eda93f39718233a16e", "user_id":
-        "user_54356a6b96c940d8913961a3c7b909f2", "status": "completed", "created_at":
-        "2023-01-13T19:16:33.616Z", "mode": "test", "object": "Event"}, {"description":
-        "batch.created", "id": "evt_cab4da02937611ed9b064ff02e65e1c5", "user_id":
-        "user_54356a6b96c940d8913961a3c7b909f2", "status": "completed", "created_at":
-        "2023-01-13T19:16:33.462Z", "mode": "test", "object": "Event"}, {"description":
-        "batch.updated", "id": "evt_4c8727c2936f11edad2e75a1ee06ba09", "user_id":
-        "user_54356a6b96c940d8913961a3c7b909f2", "status": "failed", "created_at":
-        "2023-01-13T18:22:55.293Z", "mode": "test", "object": "Event"}], "has_more":
+        "2023-05-15T17:28:08.718Z", "mode": "test", "object": "Event"}, {"description":
+        "batch.updated", "id": "evt_d84a91a0f34511ed890f7d318c2200d9", "user_id":
+        "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
+        "2023-05-15T17:28:02.541Z", "mode": "test", "object": "Event"}, {"description":
+        "batch.created", "id": "evt_d8359ee4f34511edac1d5d201dbcd7fc", "user_id":
+        "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
+        "2023-05-15T17:28:02.403Z", "mode": "test", "object": "Event"}, {"description":
+        "tracker.updated", "id": "evt_10273e48f0fd11ed84793ba5a8eedd27", "user_id":
+        "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
+        "2023-05-12T19:42:00.675Z", "mode": "test", "object": "Event"}], "has_more":
         true}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '1111'
+      - '1110'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"3ddf25e3fe9369dfd0292732ef23f59e"
+      - W/"57fefdaad2b7293b6c0108f40e23b9cc"
       expires:
       - '0'
       pragma:
@@ -201,27 +201,25 @@ interactions:
       - chunked
       x-backend:
       - easypost
-      x-canary:
-      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 1604567e63c1ae42e78965e900056747
+      - 3f02a2cd64626bade78740a400205def
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb7nuq
+      - bigweb1nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 29913d444b
-      - extlb1nuq 29913d444b
+      - intlb2nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.240108'
+      - '0.202751'
       x-version-label:
-      - easypost-202301131832-957dabd382-master
+      - easypost-202305151637-e5ce91ee24-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -241,7 +239,7 @@ interactions:
       user-agent:
       - <REDACTED>
     method: GET
-    uri: https://api.easypost.com/v2/events/evt_e800853e937611eda94a533d9c633e56/payloads/payload_11111111111111111111111111111111
+    uri: https://api.easypost.com/v2/events/evt_dc1604aef34511ed959c19d5ad973871/payloads/payload_11111111111111111111111111111111
   response:
     body:
       string: '{"error": {"code": "PAYLOAD.NOT_FOUND", "message": "The payload(s)
@@ -270,20 +268,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 1604567e63c1ae42e78965e900056760
+      - 3f02a2cd64626baee78740a400205e0e
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb8nuq
+      - bigweb2nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 29913d444b
-      - extlb1nuq 29913d444b
+      - intlb1nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.028900'
+      - '0.026708'
       x-version-label:
-      - easypost-202301131832-957dabd382-master
+      - easypost-202305151637-e5ce91ee24-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -305,7 +303,7 @@ interactions:
       user-agent:
       - <REDACTED>
     method: DELETE
-    uri: https://api.easypost.com/v2/webhooks/hook_e7c3034e937611edac174bf8a84ecdd1
+    uri: https://api.easypost.com/v2/webhooks/hook_dbd18a5ef34511edadd33df619573352
   response:
     body:
       string: '{}'
@@ -335,20 +333,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 1604567e63c1ae42e78965e900056763
+      - 3f02a2cd64626baee78740a400205e1d
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb11nuq
+      - bigweb4nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 29913d444b
-      - extlb1nuq 29913d444b
+      - intlb2nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.415161'
+      - '0.412248'
       x-version-label:
-      - easypost-202301131832-957dabd382-master
+      - easypost-202305151637-e5ce91ee24-master
       x-xss-protection:
       - 1; mode=block
     status:
