fix: use models to deserialize into

--- a/tests/cassettes/test_event_retrieve_all_payloads.yaml
+++ b/tests/cassettes/test_event_retrieve_all_payloads.yaml
@@ -20,8 +20,8 @@ interactions:
     uri: https://api.easypost.com/v2/webhooks
   response:
     body:
-      string: '{"id": "hook_d808d1caf34511ed8f92090e04a355f5", "object": "Webhook",
-        "mode": "test", "url": "http://example.com", "created_at": "2023-05-15T17:28:02Z",
+      string: '{"id": "hook_30cbb3bcf43711eda27917199f9eab66", "object": "Webhook",
+        "mode": "test", "url": "http://example.com", "created_at": "2023-05-16T22:15:40Z",
         "disabled_at": null}'
     headers:
       cache-control:
@@ -31,7 +31,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"f4d66d51f328310e461e0f437ca0b112"
+      - W/"0b3a022179ea56708476ff21fddeac78"
       expires:
       - '0'
       pragma:
@@ -49,20 +49,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 3f02a2cd64626ba2e787409e00205874
+      - 23bee7e56464008be789616500454978
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb12nuq
+      - bigweb9nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq a29e4ad05c
-      - extlb1nuq 5ab12a3ed2
+      - intlb1nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.176390'
+      - '0.145589'
       x-version-label:
-      - easypost-202305151637-e5ce91ee24-master
+      - easypost-202305162013-ad43550112-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -96,9 +96,9 @@ interactions:
     uri: https://api.easypost.com/v2/batches
   response:
     body:
-      string: '{"id": "batch_25df1d3aa8364970b72f20d6aea2770f", "object": "Batch",
+      string: '{"id": "batch_6a8cc8c3ffa0487090ac2a78560381a8", "object": "Batch",
         "mode": "test", "state": "creating", "num_shipments": 1, "reference": null,
-        "created_at": "2023-05-15T17:28:02Z", "updated_at": "2023-05-15T17:28:02Z",
+        "created_at": "2023-05-16T22:15:39Z", "updated_at": "2023-05-16T22:15:39Z",
         "scan_form": null, "shipments": [], "status": {"created": 0, "queued_for_purchase":
         0, "creation_failed": 0, "postage_purchased": 0, "postage_purchase_failed":
         0}, "pickup": null, "label_url": null}'
@@ -110,7 +110,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"27c139dbbe88f2020d00a53903e49b21"
+      - W/"95c902e14c2730a14518095df7403015"
       expires:
       - '0'
       pragma:
@@ -128,20 +128,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 3f02a2cd64626ba2e787409e0020588b
+      - 23bee7e56464008be789616500454999
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb9nuq
+      - bigweb5nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq a29e4ad05c
-      - extlb1nuq 5ab12a3ed2
+      - intlb2nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.039112'
+      - '0.078742'
       x-version-label:
-      - easypost-202305151637-e5ce91ee24-master
+      - easypost-202305162013-ad43550112-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -164,21 +164,21 @@ interactions:
     uri: https://api.easypost.com/v2/events?page_size=5
   response:
     body:
-      string: '{"events": [{"description": "batch.updated", "id": "evt_d84a91a0f34511ed890f7d318c2200d9",
+      string: '{"events": [{"description": "batch.updated", "id": "evt_3114fc5cf43711ed92c01d9acf3b6d2f",
         "user_id": "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
-        "2023-05-15T17:28:02.541Z", "mode": "test", "object": "Event"}, {"description":
-        "batch.created", "id": "evt_d8359ee4f34511edac1d5d201dbcd7fc", "user_id":
+        "2023-05-16T22:15:40.219Z", "mode": "test", "object": "Event"}, {"description":
+        "batch.created", "id": "evt_30fa3458f43711edb0a95dbb9ce80898", "user_id":
         "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
-        "2023-05-15T17:28:02.403Z", "mode": "test", "object": "Event"}, {"description":
-        "tracker.updated", "id": "evt_10273e48f0fd11ed84793ba5a8eedd27", "user_id":
+        "2023-05-16T22:15:40.043Z", "mode": "test", "object": "Event"}, {"description":
+        "batch.updated", "id": "evt_01cecac2f43711edbfcc39fdecca41c5", "user_id":
+        "user_54356a6b96c940d8913961a3c7b909f2", "status": "completed", "created_at":
+        "2023-05-16T22:14:20.906Z", "mode": "test", "object": "Event"}, {"description":
+        "batch.created", "id": "evt_01ca2094f43711edac311769086f7b77", "user_id":
+        "user_54356a6b96c940d8913961a3c7b909f2", "status": "completed", "created_at":
+        "2023-05-16T22:14:20.875Z", "mode": "test", "object": "Event"}, {"description":
+        "tracker.updated", "id": "evt_cadfbb70f40911edba08274a5cb8030b", "user_id":
         "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
-        "2023-05-12T19:42:00.675Z", "mode": "test", "object": "Event"}, {"description":
-        "tracker.updated", "id": "evt_09ce2606f0fd11edbdad75c323776192", "user_id":
-        "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
-        "2023-05-12T19:41:50.025Z", "mode": "test", "object": "Event"}, {"description":
-        "tracker.updated", "id": "evt_ec52b330f0fc11ed8fb25952d8250621", "user_id":
-        "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
-        "2023-05-12T19:41:00.562Z", "mode": "test", "object": "Event"}], "has_more":
+        "2023-05-16T16:50:41.389Z", "mode": "test", "object": "Event"}], "has_more":
         true}'
     headers:
       cache-control:
@@ -188,7 +188,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"07f66e8f75e644b6f49cfe8578f2fc50"
+      - W/"e130af1ee1eb30fa0ff82b16eb2b6145"
       expires:
       - '0'
       pragma:
@@ -206,20 +206,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 3f02a2cd64626ba7e787409e00205ad2
+      - 23bee7e564640091e789616500454b76
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb12nuq
+      - bigweb1nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq a29e4ad05c
-      - extlb1nuq 5ab12a3ed2
+      - intlb1nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.200450'
+      - '0.201761'
       x-version-label:
-      - easypost-202305151637-e5ce91ee24-master
+      - easypost-202305162013-ad43550112-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -239,7 +239,7 @@ interactions:
       user-agent:
       - <REDACTED>
     method: GET
-    uri: https://api.easypost.com/v2/events/evt_d84a91a0f34511ed890f7d318c2200d9/payloads
+    uri: https://api.easypost.com/v2/events/evt_3114fc5cf43711ed92c01d9acf3b6d2f/payloads
   response:
     body:
       string: '{"payloads": []}'
@@ -269,20 +269,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 3f02a2cd64626ba7e787409e00205af6
+      - 23bee7e564640091e789616500454b92
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb5nuq
+      - bigweb9nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq a29e4ad05c
-      - extlb1nuq 5ab12a3ed2
+      - intlb2nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.028932'
+      - '0.036003'
       x-version-label:
-      - easypost-202305151637-e5ce91ee24-master
+      - easypost-202305162013-ad43550112-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -304,7 +304,7 @@ interactions:
       user-agent:
       - <REDACTED>
     method: DELETE
-    uri: https://api.easypost.com/v2/webhooks/hook_d808d1caf34511ed8f92090e04a355f5
+    uri: https://api.easypost.com/v2/webhooks/hook_30cbb3bcf43711eda27917199f9eab66
   response:
     body:
       string: '{}'
@@ -334,20 +334,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 3f02a2cd64626ba7e787409e00205b06
+      - 23bee7e564640091e789616500454b9c
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb9nuq
+      - bigweb8nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq a29e4ad05c
-      - extlb1nuq 5ab12a3ed2
+      - intlb2nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.313967'
+      - '0.356449'
       x-version-label:
-      - easypost-202305151637-e5ce91ee24-master
+      - easypost-202305162013-ad43550112-master
       x-xss-protection:
       - 1; mode=block
     status:
