--- a/tests/cassettes/test_event_retrieve_payload.yaml
+++ b/tests/cassettes/test_event_retrieve_payload.yaml
@@ -20,8 +20,8 @@ interactions:
     uri: https://api.easypost.com/v2/webhooks
   response:
     body:
-      string: '{"id": "hook_dbd18a5ef34511edadd33df619573352", "object": "Webhook",
-        "mode": "test", "url": "http://example.com", "created_at": "2023-05-15T17:28:08Z",
+      string: '{"id": "hook_3499e3e2f43711edbb447565db124d54", "object": "Webhook",
+        "mode": "test", "url": "http://example.com", "created_at": "2023-05-16T22:15:46Z",
         "disabled_at": null}'
     headers:
       cache-control:
@@ -31,7 +31,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"6d20b92a48e80c6387786ebf2db8ff7a"
+      - W/"214d548f4b77946290e22683029b1755"
       expires:
       - '0'
       pragma:
@@ -49,20 +49,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 3f02a2cd64626ba8e78740a400205b44
+      - 23bee7e064640092e789616600454bd6
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb4nuq
+      - bigweb9nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb2nuq a29e4ad05c
-      - extlb1nuq 5ab12a3ed2
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.118994'
+      - '0.152518'
       x-version-label:
-      - easypost-202305151637-e5ce91ee24-master
+      - easypost-202305162013-ad43550112-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -96,9 +96,9 @@ interactions:
     uri: https://api.easypost.com/v2/batches
   response:
     body:
-      string: '{"id": "batch_7f2f5a9fc0294e23bcde64c360901f96", "object": "Batch",
+      string: '{"id": "batch_3613de1570fd4802a09bdcc819fce1ca", "object": "Batch",
         "mode": "test", "state": "creating", "num_shipments": 1, "reference": null,
-        "created_at": "2023-05-15T17:28:08Z", "updated_at": "2023-05-15T17:28:08Z",
+        "created_at": "2023-05-16T22:15:46Z", "updated_at": "2023-05-16T22:15:46Z",
         "scan_form": null, "shipments": [], "status": {"created": 0, "queued_for_purchase":
         0, "creation_failed": 0, "postage_purchased": 0, "postage_purchase_failed":
         0}, "pickup": null, "label_url": null}'
@@ -110,7 +110,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"3b3599195eb5461bded4952b965b11ae"
+      - W/"f384683cef26655745fc3488715bc3b9"
       expires:
       - '0'
       pragma:
@@ -128,20 +128,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 3f02a2cd64626ba8e78740a400205b59
+      - 23bee7e064640092e789616600454be6
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb6nuq
+      - bigweb1nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb1nuq a29e4ad05c
-      - extlb1nuq 5ab12a3ed2
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.055777'
+      - '0.044101'
       x-version-label:
-      - easypost-202305151637-e5ce91ee24-master
+      - easypost-202305162013-ad43550112-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -164,21 +164,21 @@ interactions:
     uri: https://api.easypost.com/v2/events?page_size=5
   response:
     body:
-      string: '{"events": [{"description": "batch.updated", "id": "evt_dc1604aef34511ed959c19d5ad973871",
+      string: '{"events": [{"description": "batch.updated", "id": "evt_34dbac50f43711edba5907e39df03ec8",
         "user_id": "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
-        "2023-05-15T17:28:08.907Z", "mode": "test", "object": "Event"}, {"description":
-        "batch.created", "id": "evt_dbf92bb8f34511eda0d51fe9fe89de8f", "user_id":
+        "2023-05-16T22:15:46.554Z", "mode": "test", "object": "Event"}, {"description":
+        "batch.created", "id": "evt_34c41b76f43711ed89787bd323736654", "user_id":
         "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
-        "2023-05-15T17:28:08.718Z", "mode": "test", "object": "Event"}, {"description":
-        "batch.updated", "id": "evt_d84a91a0f34511ed890f7d318c2200d9", "user_id":
+        "2023-05-16T22:15:46.399Z", "mode": "test", "object": "Event"}, {"description":
+        "batch.updated", "id": "evt_3114fc5cf43711ed92c01d9acf3b6d2f", "user_id":
         "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
-        "2023-05-15T17:28:02.541Z", "mode": "test", "object": "Event"}, {"description":
-        "batch.created", "id": "evt_d8359ee4f34511edac1d5d201dbcd7fc", "user_id":
+        "2023-05-16T22:15:40.219Z", "mode": "test", "object": "Event"}, {"description":
+        "batch.created", "id": "evt_30fa3458f43711edb0a95dbb9ce80898", "user_id":
         "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
-        "2023-05-15T17:28:02.403Z", "mode": "test", "object": "Event"}, {"description":
-        "tracker.updated", "id": "evt_10273e48f0fd11ed84793ba5a8eedd27", "user_id":
-        "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
-        "2023-05-12T19:42:00.675Z", "mode": "test", "object": "Event"}], "has_more":
+        "2023-05-16T22:15:40.043Z", "mode": "test", "object": "Event"}, {"description":
+        "batch.updated", "id": "evt_01cecac2f43711edbfcc39fdecca41c5", "user_id":
+        "user_54356a6b96c940d8913961a3c7b909f2", "status": "completed", "created_at":
+        "2023-05-16T22:14:20.906Z", "mode": "test", "object": "Event"}], "has_more":
         true}'
     headers:
       cache-control:
@@ -188,7 +188,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"57fefdaad2b7293b6c0108f40e23b9cc"
+      - W/"43775f333ea34d7b38f91d698f05df34"
       expires:
       - '0'
       pragma:
@@ -206,20 +206,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 3f02a2cd64626bade78740a400205def
+      - 23bee7e064640097e789616600454db3
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb1nuq
+      - bigweb12nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq a29e4ad05c
-      - extlb1nuq 5ab12a3ed2
+      - intlb1nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.202751'
+      - '0.262082'
       x-version-label:
-      - easypost-202305151637-e5ce91ee24-master
+      - easypost-202305162013-ad43550112-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -239,7 +239,7 @@ interactions:
       user-agent:
       - <REDACTED>
     method: GET
-    uri: https://api.easypost.com/v2/events/evt_dc1604aef34511ed959c19d5ad973871/payloads/payload_11111111111111111111111111111111
+    uri: https://api.easypost.com/v2/events/evt_34dbac50f43711edba5907e39df03ec8/payloads/payload_11111111111111111111111111111111
   response:
     body:
       string: '{"error": {"code": "PAYLOAD.NOT_FOUND", "message": "The payload(s)
@@ -268,20 +268,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 3f02a2cd64626baee78740a400205e0e
+      - 23bee7e064640098e789616600454dc9
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb2nuq
+      - bigweb4nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq a29e4ad05c
-      - extlb1nuq 5ab12a3ed2
+      - intlb2nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.026708'
+      - '0.031689'
       x-version-label:
-      - easypost-202305151637-e5ce91ee24-master
+      - easypost-202305162013-ad43550112-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -303,7 +303,7 @@ interactions:
       user-agent:
       - <REDACTED>
     method: DELETE
-    uri: https://api.easypost.com/v2/webhooks/hook_dbd18a5ef34511edadd33df619573352
+    uri: https://api.easypost.com/v2/webhooks/hook_3499e3e2f43711edbb447565db124d54
   response:
     body:
       string: '{}'
@@ -333,20 +333,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 3f02a2cd64626baee78740a400205e1d
+      - 23bee7e064640098e789616600454dd4
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb4nuq
+      - bigweb6nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq a29e4ad05c
-      - extlb1nuq 5ab12a3ed2
+      - intlb1nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.412248'
+      - '0.268077'
       x-version-label:
-      - easypost-202305151637-e5ce91ee24-master
+      - easypost-202305162013-ad43550112-master
       x-xss-protection:
       - 1; mode=block
     status:
